feat: 自動ログイン機能とクッキー自動更新機能を追加
- X.comユーザー名・パスワードによる自動ログイン機能
- クッキー有効期限切れ時の自動再ログイン
- セッション管理API (/api/session/info, /api/session/refresh)
- 2FA認証検出と手動介入通知
- ログイン失敗時のリトライ機能
- セッション有効性の詳細管理
- 環境変数による自動ログイン設定
- READMEに詳細な設定方法を追加

v1.1.0 - 自動ログイン機能対応

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,14 @@ RATE_LIMIT_PER_MINUTE=30
 RATE_LIMIT_PER_HOUR=1000
 MAX_CONCURRENT_REQUESTS=5
 
+# X.com自動ログイン設定
+X_USERNAME=your-x-username-here
+X_PASSWORD=your-x-password-here
+X_EMAIL=your-x-email-here
+AUTO_LOGIN_ENABLED=True
+LOGIN_RETRY_COUNT=3
+LOGIN_TIMEOUT=30
+
 # スクレイピング設定
 REQUEST_TIMEOUT=10
 PAGE_LOAD_TIMEOUT=15
